--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -7,9 +7,6 @@
         <div class="row">
                 <div class="col-4">
                  <div class="card col4">
-                <div class="card-header bg-dark text-white">
-                  <h3>Personal Information</h3>
-                </div>
                 <div class="card-body">
 
                   <div class="row row-cols-3">
@@ -53,6 +50,7 @@
                 </div>
               </div>
                 <div class="col 8">
+                  <h3>Saved Jobs</h3>
                   <div>
                     {% include 'saved_jobs.html' %}
                   </div>
