--- a/website/templates/user_navbar.html
+++ b/website/templates/user_navbar.html
@@ -15,8 +15,8 @@
             Jobs
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'all_resume' user.pk %}">Saved Jobs</a></li>
-            <li><a class="dropdown-item" href="#">Applied Jobs</a></li>
+            <li><a class="dropdown-item" href="{% url 'saved_jobs' %}">Saved Jobs</a></li>
+            <li><a class="dropdown-item" href="{% url 'applied_jobs' %}">Applied Jobs</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
