--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -11,10 +11,10 @@
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Search and apply now</h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula magna nec tincidunt ornare. Quisque at purus non nulla efficitur imperdiet. Mauris egestas luctus aliquet.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-            <form method="POST" action="{% url 'job_search' %}">
+            <form class="d-flex" method="POST" action="{% url 'job_search' %}">
                 {% csrf_token %}
-                <input type="text" name="query" placeholder="Search Jobs" style="width: 400px;" />
-                <button type="submit" class="btn btn-primary btn-lg px-4 me-md-2">Search</button>
+                <input class="form-control w-100 me-2" type="text" name="query" placeholder="Search Jobs" />
+                <button type="submit" class="btn btn-outline-primary">Search</button>
             </form>
         </div>
       </div>
