--- a/website/templates/users/edit_resume.html
+++ b/website/templates/users/edit_resume.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
           <div class="col-4">
-            {% include 'users/personal_info.html' %}
+            {% include 'personal_info.html' %}
           </div>
 
           <div class="col 8">
