--- a/website/templates/personal_info.html
+++ b/website/templates/personal_info.html
@@ -5,17 +5,13 @@
       <div class="col-4">
         <img src="../../media/{{ pii.profile_image }}" width="125" height="125" />
       </div>
-      <div class="col-6">
-
-        <h5 class="card-title">{{ pii.first_name }} {{ pii.last_name }}</h5>
-      </div>
-      <div class="col-2 d-flex justify-content-end">
-        <a href="{% url 'edit_personalinfo' pii.pk %}"><button type="button" class="btn btn-primary mx-1"
-                    style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Edit</button></a>
+      <div class="col-8 d-flex justify-content-end">
+        <a href="#"><button type="button" class="btn btn-primary mx-1"
+                    style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View Portfolio</button></a>
       </div>
     </div>
-    <p class="card-text">{{ pii.about | safe }}</p>
-
+    <h5 class="mt-2">{{ pii.first_name }} {{ pii.last_name }}</h5>
+    <p>{{ pii.about | safe }}</p>
     <h5>Personal Details</h5>
     <p class="card-text">{{ pii.city }}, {{ pii.state }}</p>
     <p class="card-text">
