--- a/website/templates/user_page/user_home.html
+++ b/website/templates/user_page/user_home.html
@@ -4,11 +4,11 @@
     <div class="container">
         <div class="row">
           <div class="col-4">
-            {% include 'personal_info.html' %}
+            {% include 'user_page/user_info.html' %}
           </div>
 
           <div class="col 8">
-            {% include 'user_resume.html' %}
+            {% include 'user_page/resume.html' %}
           </div>
         </div>
     </div>
