Add portfolio display and User Portfolio function
Added a new section for displaying user's portfolios along with a new function to fetch portfolio details in views.py. New HTML templates were created to reflect these changes. Refactored existing functions to fetch user details. Corrected minor spelling mistake in 'add_portfolio' template. Created new URL path for the user portfolio.

--- a/website/templates/add_portfolio.html
+++ b/website/templates/add_portfolio.html
@@ -58,7 +58,7 @@
                                       style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button></a>
 
             <a href="{{ item.website_link }}">
-                <button class="btn btn-secondary float-end">View Webiste</button>
+                <button class="btn btn-secondary float-end">View Website</button>
             </a>
         </div>
       </div>
