Update user-info includes and add recruiter-info and user-info templates
Updated the HTML templates to change the inclusion of 'personal_info.html' to 'users/user_info.html'. Additionally, two new templates - 'recruiters/recruiter_info.html' and 'users/user_info.html' have been created for use in several pages. Adjustments were also made in the display elements and link redirects in the 'portfolio.html', 'saved_resumes.html' pages and others.

--- a/website/templates/recruiter_profile.html
+++ b/website/templates/recruiter_profile.html
@@ -7,7 +7,7 @@
         <div class="row">
                 <div class="col-4">
                      <div class="card col4">
-                        {% include 'personal_info.html' %}
+                        {% include 'recruiters/recruiter_info.html' %}
                     </div>
                 </div>
 
