--- a/website/templates/recruiters/saved_resumes.html
+++ b/website/templates/recruiters/saved_resumes.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
           <div class="col-4">
-            {% include 'personal_info.html' %}
+            {% include 'recruiters/recruiter_info.html' %}
           </div>
 
           <div class="col 8">
@@ -27,7 +27,7 @@
                             <td>{{ user.saved.personal_information.city }}</td>
                             <td>{{ user.saved.personal_information.state }}</td>
                             <td class="text-center">
-                                <a href="{% url 'all_resume' user.saved_id %}"><button type="button" class="btn btn-secondary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
+                                <a href="{% url 'user_page' user.saved.username %}"><button type="button" class="btn btn-secondary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
                             </td>
                             <td class="text-center">
                                 <a href="{% url 'rec_remove_resume' user.saved_id %}"><button type="button" class="btn btn-danger mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button></a>
