--- a/website/templates/user_page/portfolio.html
+++ b/website/templates/user_page/portfolio.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-{% if user.is_authenticated %}
-    <div class="container">
+    <div class="container mt-3">
         <div class="row">
           <div class="col-4">
               {% include 'user_page/user_info.html' %}
@@ -10,13 +9,13 @@
 
           <div class="col 8">
 
-              <div class="container mt-5">
+              <div class="container">
                   {% for item in portfolio %}
                     {% if forloop.counter0|divisibleby:2 %}
                       <div class="row row-cols-1 row-cols-md-2 g-4">
                     {% endif %}
                     <div class="col">
-                      <div class="card mt-4">
+                      <div class="card">
                         <img src="../../media/{{ item.portfolio_image }}" class="card-img-top" alt="Portfolio Image">
                         <div class="card-body">
                           <h5 class="card-title">{{ item.title }}</h5>
@@ -36,6 +35,5 @@
           </div>
         </div>
     </div>
-{% endif %}
 
 {% endblock %}
