--- a/website/templates/recruiter_navbar.html
+++ b/website/templates/recruiter_navbar.html
@@ -26,7 +26,7 @@
       </ul>
       <form class="d-flex" method="POST" action="{% url 'user_search' %}">
                 {% csrf_token %}
-                <input class="form-control w-100 me-2" type="text" name="query" placeholder="Search Jobs" />
+                <input class="form-control w-100 me-2" type="text" name="query" placeholder="Search Talent" />
                 <button type="submit" class="btn btn-outline-primary">Search</button>
       </form>
     </div>
