Change redirects, image source and links in views and templates
Changes include redirecting to 'saved_jobs' instead of 'user_profile' after job deletion. The image source is updated in 'home.html' from 'future-engineer.jpg' to 'future-engineer.jpeg'. Links are updated in 'user_navbar.html' to direct to 'user_page' and 'user_portfolio' instead of 'all_resume' and direct link respectively.

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -3,7 +3,7 @@
 
 <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="media/future-engineer.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="400" height="300" loading="lazy">
+        <img src="media/future-engineer.jpeg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="400" height="300" loading="lazy">
       </div>
       <div class="col-lg-6 border border-primary rounded p-4">
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Search and apply now</h1>
