--- a/website/templates/user_navbar.html
+++ b/website/templates/user_navbar.html
@@ -23,7 +23,7 @@
             Resume
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'all_resume' user.pk %}">View Resume</a></li>
+            <li><a class="dropdown-item" href="{% url 'user_page' user.username %}">View Resume</a></li>
             <li><a class="dropdown-item" href="{% url 'edit_resume' %}">Edit Resume</a></li>
           </ul>
         </li>
@@ -32,7 +32,7 @@
             Portfolio
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/user/portfolio/add">View Portfolio</a></li>
+            <li><a class="dropdown-item" href="{% url 'user_portfolio' user.username %}">View Portfolio</a></li>
             <li><a class="dropdown-item" href="/user/portfolio/add">Add/Edit Portfolio</a></li>
           </ul>
         </li>
