Update templates and styling for job listings
Modified the website's job_listings.html, home.html, and associated CSS to improve visual layout and navigation. These changes include implementing new CSS for inner margin space, restructuring HTML to include separate header and footer files, and reformatting existing text content for better readability.

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -8,9 +8,9 @@
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
           <h1>Search apply now<span>.</span></h1>
-          <h2> Are you tired of endlessly scrolling through job boards, feeling overwhelmed and lost in the sea of listtings.
-                     Welcome to Tech Artisan, your ultimate destination for IT career advancement. Use our advanced AI system
-                     to match you with the best opportuntiies available.</h2>
+          <h2> Are you tired of endlessly scrolling through job boards, feeling overwhelmed and lost in the sea of
+            listtings. Welcome to Tech Artisan, your ultimate destination for IT career advancement. Use our advanced
+            AI system to match you with the best opportuntiies available.</h2>
         </div>
       </div>
 
@@ -21,8 +21,8 @@
 
             <form class="d-flex w-100" method="POST" action="{% url 'job_search' %}">
               {% csrf_token %}
-                           <input class="form-control mx-2" type="text" name="query" placeholder="I am looking for python remote positions" />
-                           <div class="tech-search-form"><button type="submit">Search</button></div>
+              <input class="form-control mx-2" type="text" name="query" placeholder="I am looking for python remote positions" />
+              <div class="tech-search-form"><button type="submit">Search</button></div>
             </form>
           </div>
         </div>
@@ -56,7 +56,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="">Portfolio Page</a></h4>
-              <p>Incorporate website links to showcase your past projects, complemented by images and detailed descriptions.</p>
+              <p>Incorporate website links to showcase your past projects, complemented by an image and detailed description.</p>
             </div>
           </div>
 
