--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1570,3 +1570,8 @@ section {
     font-size: 13px;
     color: #fff;
 }
+
+/* Tech Artisan Custom CSS */
+.inner-top-margin {
+    margin-top: 100px;
+}
