--- a/website/templates/job_listings.html
+++ b/website/templates/job_listings.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
-{% block content %}
-<div class="container mt-5">
+{% load static %}
+{% include 'inner-header.html' %}
+<div class="container inner-top-margin">
     <div class="row">
         <div class="col-md-4">
             {% for result in search_results %}
@@ -178,4 +178,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% include 'footer.html' %}
