--- a/website/templates/add_joblisting.html
+++ b/website/templates/add_joblisting.html
@@ -1,10 +1,9 @@
-{% extends 'base.html' %}
-{% block content %}
-
+{% load static %}
+{% include 'inner-header.html' %}
 {% if user.is_authenticated %}
-
+{% include 'recruiter_navbar.html' %}
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mb-5">
         <div class="col-lg-6">
             <h1>Add Job Listing</h1>
                 <form method="POST" action="{% url 'add_job' %}">
@@ -89,8 +88,8 @@
                         <label class="form-label">Benefits</label>
                         {{ form.benefits }}
                     </div>
-                    <div>
-                        <button type="submit" class="btn btn-secondary">Save</button>
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="btn lg-button-yellow">Save</button>
                     </div>
                 </form>
         </div>
@@ -98,4 +97,4 @@
 </div>
 
 {% endif %}
-{% endblock %}
+{% include 'footer.html' %}
