--- a/website/templates/add_joblisting_skill.html
+++ b/website/templates/add_joblisting_skill.html
@@ -1,10 +1,9 @@
-{% extends 'base.html' %}
-{% block content %}
-
+{% load static %}
+{% include 'inner-header.html' %}
 {% if user.is_authenticated %}
-
+{% include 'recruiter_navbar.html' %}
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mb-5">
         <div class="col-lg-6">
             <h1>Add Job Listing</h1>
                     <div>
@@ -34,8 +33,8 @@
                     <div id="search-results" class="mt-2">
                       {% include 'skill_search.html' %}
                     </div>
-                   <div>
-                       <a href="{% url 'add_job' %}"><button type="submit" class="btn btn-secondary">Next</button></a>
+                   <div class="d-flex justify-content-end">
+                       <a href="{% url 'add_job' %}"><button type="submit" class="btn lg-button-yellow">Next</button></a>
                     </div>
         </div>
     </div>
@@ -43,4 +42,4 @@
 
 
 {% endif %}
-{% endblock %}
+{% include 'footer.html' %}
