--- a/website/templates/all_view_job.html
+++ b/website/templates/all_view_job.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
-{% block content %}
-    <div class="container">
+{% load static %}
+{% include 'inner-header.html' %}
+    <div class="container inner-top-margin">
         <div class="row">
             <div class="col-2"></div>
                 <div class="col 10">
@@ -8,4 +8,4 @@
                 </div>
         </div>
     </div>
-{% endblock %}
+{% include 'footer.html' %}
