--- a/website/templates/edit_joblisting.html
+++ b/website/templates/edit_joblisting.html
@@ -1,10 +1,9 @@
-{% extends 'base.html' %}
-{% block content %}
-
+{% load static %}
+{% include 'inner-header.html' %}
 {% if user.is_authenticated %}
-
+{% include 'recruiter_navbar.html' %}
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mb-5">
         <div class="col-lg-6">
             <h1>Edit Job Listing</h1>
                 <form method="POST">
@@ -118,8 +117,8 @@
                             the best results.
                         </div>
                     </div>
-                    <div>
-                        <button type="submit" class="btn btn-secondary">Save</button>
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="btn lg-button-yellow">Save</button>
                     </div>
                 </form>
         </div>
@@ -127,4 +126,4 @@
 </div>
 
 {% endif %}
-{% endblock %}
+{% include 'footer.html' %}
