--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -27,30 +27,30 @@
 
   <!-- Template Main CSS File -->
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
-
 </head>
-
 <body>
-
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
-    <div class="container d-flex align-items-center justify-content-lg-between">
-
-      <h1 class="logo me-auto me-lg-0"><a href="{% url 'home' %}">Tech Artisan<span>.</span></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-
-      <nav id="navbar" class="navbar order-last order-lg-0">
-        <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#recruiter">Recruiter</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
-      <a href="#" class="get-started-btn scrollto">Register</a>
-
-    </div>
+      <div class="container d-flex align-items-center justify-content-lg-between">
+          <h1 class="logo me-auto me-lg-0"><a href="{% url 'home' %}">Tech Artisan<span>.</span></a></h1>
+          <nav id="navbar" class="navbar order-last order-lg-0">
+              <ul>
+                  <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+                  <li><a class="nav-link scrollto" href="#services">Services</a></li>
+                  <li><a class="nav-link scrollto" href="#recruiter">Recruiter</a></li>
+              </ul>
+              <i class="bi bi-list mobile-nav-toggle"></i>
+          </nav>
+          <!-- Button section. -->
+          <div class="d-flex">
+              {% if user.is_authenticated %}
+              <a href="{% url 'user_profile' %}" class="get-started-btn scrollto" style="margin-right: 10px">Profile</a>
+              <a href="{% url 'logout' %}" class="get-started-btn scrollto" style="margin-right: 10px;">Logout</a>
+              {% else %}
+              <a href="{% url 'login_page' %}" class="get-started-btn scrollto" style="margin-right: 10px;">Login</a>
+              <a href="{% url 'home' %}" class="get-started-btn scrollto">Sign Up</a>
+              {% endif %}
+          </div>
+      </div>
   </header>
   <!-- End Header -->
