--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -40,7 +40,7 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Check our Services</p>
+          <p>Our Services</p>
         </div>
 
         <div class="row">
