--- a/website/templates/recruiter_navbar.html
+++ b/website/templates/recruiter_navbar.html
@@ -1,6 +1,6 @@
 
-<div class="container px-4 text-center">
-<nav class="navbar navbar-expand-lg">
+<div class="container px-4 text-center inner-top-margin">
+<nav class="profile-navbar navbar-expand-lg">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -27,7 +27,7 @@
       <form class="d-flex" method="POST" action="{% url 'user_search' %}">
                 {% csrf_token %}
                 <input class="form-control w-100 me-2" type="text" name="query" placeholder="Search Talent" />
-                <button type="submit" class="btn btn-outline-primary">Search</button>
+                <button type="submit" class="btn lg-button-yellow">Search</button>
       </form>
     </div>
   </div>
