--- a/website/templates/recruiter_profile.html
+++ b/website/templates/recruiter_profile.html
@@ -1,10 +1,9 @@
-{% extends 'base.html' %}
-{% block content %}
-
+{% load static %}
+{% include 'inner-header.html' %}
 {% if user.is_authenticated %}
-
+{% include 'recruiter_navbar.html' %}
     <div class="container">
-        <div class="row">
+        <div class="row mb-5">
                 <div class="col-4">
                      <div class="card col4">
                         {% include 'recruiters/recruiter_info.html' %}
@@ -31,8 +30,9 @@
                                     <td>{{ appl.job__title }} {{ appl.user_id__first_name }}</td>
                                     <td>{{ appl.job__company }}</td>
                                     <td class="text-center">
-                                        <a href="{% url 'view_cover_letter' appl.job_id appl.user_id %}"><button type="button" class="btn btn-secondary mx-1"
-                                                           style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
+                                        <a href="{% url 'view_cover_letter' appl.job_id appl.user_id %}">
+                                            <button type="button" class="btn md-yellow-button">View</button>
+                                        </a>
                                     </td>
                                     <td class="text-center">
                                         <a href="{% url 'rec_delete_applied' appl.job_id appl.user_id %}"><button type="button" class="btn btn-danger mx-1"
@@ -49,4 +49,4 @@
     </div>
 
 {% endif %}
-{% endblock %}
+{% include 'footer.html' %}
