--- a/website/templates/user_page/user_home.html
+++ b/website/templates/user_page/user_home.html
@@ -1,8 +1,7 @@
-{% extends 'base.html' %}
-{% block content %}
-
-    <div class="container">
-        <div class="row">
+{% load static %}
+{% include 'inner-header.html' %}
+    <div class="container inner-top-margin">
+        <div class="row mb-5">
           <div class="col-4">
             {% include 'user_page/user_info.html' %}
           </div>
@@ -12,5 +11,4 @@
           </div>
         </div>
     </div>
-
-{% endblock %}
+{% include 'footer.html' %}
