--- a/website/templates/view_cover_letter.html
+++ b/website/templates/view_cover_letter.html
@@ -1,10 +1,9 @@
-{% extends 'base.html' %}
-{% block content %}
-
+{% load static %}
+{% include 'inner-header.html' %}
 {% if user.is_authenticated %}
-
+{% include 'recruiter_navbar.html' %}
     <div class="container">
-        <div class="row">
+        <div class="row mb-5">
                 <div class="col-4">
                  <div class="card col4">
                 <div class="card-body">
@@ -125,4 +124,4 @@
     </div>
 
 {% endif %}
-{% endblock %}
+{% include 'footer.html' %}
