Refactor user and recruiter interface styles and views
Enhanced the user interface with styling and view adjustments that include corrected button markup in CSS, added user profile and login navigation to header, and restructured HTML templates to improve readability and navigation. Also modified the logic for handling page renders based on user type (recruiter or job seeker) in users.py.

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -9,7 +9,7 @@
         <div class="col-xl-6 col-lg-8">
           <h1>Search apply now<span>.</span></h1>
           <h2> Are you tired of endlessly scrolling through job boards, feeling overwhelmed and lost in the sea of
-            listtings. Welcome to Tech Artisan, your ultimate destination for IT career advancement. Use our advanced
+            listings. Welcome to Tech Artisan, your ultimate destination for IT career advancement. Use our advanced
             AI system to match you with the best opportuntiies available.</h2>
         </div>
       </div>
