--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -2,7 +2,7 @@
 {% include 'inner-header.html' %}
 {% if user.is_authenticated %}
 {% include 'user_navbar.html' %}
-    <div class="container inner-top-margin">
+    <div class="container">
         <div class="row mb-5">
           <div class="col-4">
               {% include 'users/user_info.html' %}
@@ -23,8 +23,7 @@
                       <td>Some Recruiter Name</td>
                       <td>Subject line goes here</td>
                       <td class="text-center">
-                          <a href="#"><button type="button" class="btn btn-secondary mx-1"
-                                                                                 style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
+                          <a href="#"><button type="button" class="btn md-yellow-button">View</button></a>
                       </td>
                       <td class="text-center">
                           <a href="#">
