--- a/website/templates/users/applied_jobs.html
+++ b/website/templates/users/applied_jobs.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
-{% block content %}
-
+{% load static %}
+{% include 'inner-header.html' %}
 {% if user.is_authenticated %}
+{% include 'user_navbar.html' %}
     <div class="container">
-        <div class="row">
+        <div class="row mb-5">
           <div class="col-4">
             {% include 'users/user_info.html' %}
           </div>
@@ -30,8 +30,9 @@
                       <td>{{ applied.job.state }}</td>
                       <td>{{ applied.job.location }}</td>
                       <td class="text-center">
-                          <a href="{% url 'all_view_job' applied.job.id %}"><button type="button" class="btn btn-secondary mx-1"
-                                                                                 style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
+                          <a href="{% url 'all_view_job' applied.job.id %}">
+                              <button type="button" class="btn md-yellow-button">View</button>
+                          </a>
                       </td>
                   </tr>
                   {% endfor %}
@@ -42,4 +43,4 @@
     </div>
 {% endif %}
 
-{% endblock %}
+{% include 'footer.html' %}
