--- a/website/templates/add_portfolio.html
+++ b/website/templates/add_portfolio.html
@@ -1,6 +1,7 @@
-{% extends 'base.html' %}
-{% block content %}
-
+{% load static %}
+{% include 'inner-header.html' %}
+{% if user.is_authenticated %}
+{% include 'user_navbar.html' %}
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-6">
@@ -68,6 +69,5 @@
     {% endif %}
   {% endfor %}
 </div>
-
-
-{% endblock %}
+{% endif %}
+{% include 'footer.html' %}
