--- a/website/templates/apply_job.html
+++ b/website/templates/apply_job.html
@@ -1,15 +1,11 @@
-{% extends 'base.html' %}
-{% block content %}
-
+{% load static %}
+{% include 'inner-header.html' %}
 {% if user.is_authenticated %}
-
+{% include 'user_navbar.html' %}
     <div class="container">
-        <div class="row">
+        <div class="row mb-5">
                 <div class="col-4">
                  <div class="card col4">
-                <div class="card-header bg-dark text-white">
-                  <h3>Recruiter Information</h3>
-                </div>
                 <div class="card-body">
 
                   <div class="row row-cols-3">
@@ -144,4 +140,4 @@
     </div>
 
 {% endif %}
-{% endblock %}
+{% include 'footer.html' %}
