--- a/website/templates/edit_portfolio.html
+++ b/website/templates/edit_portfolio.html
@@ -1,6 +1,7 @@
-{% extends 'base.html' %}
-{% block content %}
-
+{% load static %}
+{% include 'inner-header.html' %}
+{% if user.is_authenticated %}
+{% include 'user_navbar.html' %}
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-6">
@@ -43,5 +44,5 @@
         </div>
     </div>
 </div>
-
-{% endblock %}
+{% endif %}
+{% include 'footer.html' %}
