--- a/website/templates/user_page/portfolio.html
+++ b/website/templates/user_page/portfolio.html
@@ -1,8 +1,7 @@
-{% extends 'base.html' %}
-{% block content %}
-
-    <div class="container mt-3">
-        <div class="row">
+{% load static %}
+{% include 'inner-header.html' %}
+    <div class="container inner-top-margin">
+        <div class="row mb-5">
           <div class="col-4">
               {% include 'user_page/user_info.html' %}
           </div>
@@ -36,4 +35,4 @@
         </div>
     </div>
 
-{% endblock %}
+{% include 'footer.html' %}
