--- a/website/templates/users/edit_resume.html
+++ b/website/templates/users/edit_resume.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
-{% block content %}
-
+{% load static %}
+{% include 'inner-header.html' %}
 {% if user.is_authenticated %}
+{% include 'user_navbar.html' %}
     <div class="container">
         <div class="row">
           <div class="col-4">
@@ -141,4 +141,4 @@
     </div>
 {% endif %}
 
-{% endblock %}
+{% include 'footer.html' %}
