--- a/website/templates/all_view_job.html
+++ b/website/templates/all_view_job.html
@@ -1,6 +1,13 @@
 {% load static %}
 {% include 'inner-header.html' %}
-    <div class="container inner-top-margin">
+
+{% if request.session.recruiter == False %}
+    {% include 'user_navbar.html' %}
+{% else %}
+    {% include 'recruiter_navbar.html' %}
+{% endif %}
+
+    <div class="container">
         <div class="row">
             <div class="col-2"></div>
                 <div class="col 10">
