Add email verification for user registration
Introduced the functionality for sending a verification email to users during registration. Registration now requires email verification before the user is activated. Also, included email verification success and failure pages. Updated navbar in 'all_view_job' template to differentiate between user and recruiter.

--- a/website/templates/inner-header.html
+++ b/website/templates/inner-header.html
@@ -61,4 +61,11 @@
         {% endif %}
       </div>
   </div>
+
 </header><!-- End Header -->
+
+{% if request.session.recruiter == False %}
+    {% include 'user_navbar.html' %}
+{% else %}
+    {% include 'recruiter_navbar.html' %}
+{% endif %}
