--- a/website/templates/job_listings.html
+++ b/website/templates/job_listings.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% include 'inner-header.html' %}
-<div class="container inner-top-margin">
+<div class="container">
     <div class="row">
         <div class="col-md-4">
             {% for result in search_results %}
