--- a/website/templates/user_page/user_home.html
+++ b/website/templates/user_page/user_home.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% include 'inner-header.html' %}
-    <div class="container inner-top-margin">
+    <div class="container">
         <div class="row mb-5">
           <div class="col-4">
             {% include 'user_page/user_info.html' %}
