--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -1,7 +1,6 @@
 {% load static %}
 {% include 'inner-header.html' %}
 {% if user.is_authenticated %}
-{% include 'user_navbar.html' %}
     <div class="container">
         <div class="row mb-5">
           <div class="col-4">
@@ -9,6 +8,7 @@
           </div>
 
           <div class="col 8">
+              <h3>Messages</h3>
              <table class="table table-hover table-bordered">
                   <thead class="table-dark">
                   <tr>
