--- a/website/templates/edit_personalinfo.html
+++ b/website/templates/edit_personalinfo.html
@@ -1,6 +1,5 @@
-{% extends 'base.html' %}
-{% block content %}
-
+{% load static %}
+{% include 'inner-header.html' %}
 <div class="container mb-5">
     <div class="row justify-content-center">
         <div class="col-lg-6">
@@ -84,4 +83,4 @@
     </div>
 </div>
 
-{% endblock %}
+{% include 'footer.html' %}
