Update portfolio image handling and minor UI tweaks
Enhanced handling of portfolio images by adding file naming convention using unique random strings and user's id. Additional image checks have been put in place in the 'edit_portfolio' workflow for replacing an existing image. Additionally, minor UI adjustments were made in portfolio related templates to enhance user experience.

--- a/website/templates/add_portfolio.html
+++ b/website/templates/add_portfolio.html
@@ -40,7 +40,7 @@
     </div>
 </div>
 
-<div class="container mt-5">
+<div class="container mt-3 mb-5">
   {% for item in port_list %}
     {% if forloop.counter0|divisibleby:2 %}
       <div class="row row-cols-1 row-cols-md-2 g-4">
