--- a/website/templates/edit_portfolio.html
+++ b/website/templates/edit_portfolio.html
@@ -2,7 +2,7 @@
 {% include 'inner-header.html' %}
 {% if user.is_authenticated %}
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mb-5">
         <div class="col-lg-6">
             <h1>Add Website</h1>
                 <form method="POST" enctype="multipart/form-data">
