--- a/website/templates/user_page/portfolio.html
+++ b/website/templates/user_page/portfolio.html
@@ -15,7 +15,8 @@
                     {% endif %}
                     <div class="col">
                       <div class="card">
-                        <img src="../../media/{{ item.portfolio_image }}" class="card-img-top" alt="Portfolio Image">
+                        <img src="../../media/{{ item.portfolio_image }}" class="card-img-top" alt="Portfolio Image"
+                        width="400" height="300">
                         <div class="card-body">
                           <h5 class="card-title">{{ item.title }}</h5>
                           <p class="card-text">{{ item.description}}</p>
