--- a/website/templates/add_education.html
+++ b/website/templates/add_education.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
-{% block content %}
-
+{% load static %}
+{% include 'inner-header.html' %}
+{% if user.is_authenticated %}
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row mb-5 justify-content-center">
         <div class="col-lg-6">
             <h1>Add Education/Certifications</h1>
                 <form method="POST" action="{% url 'add_education' %}">
@@ -26,4 +26,5 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endif %}
+{% include 'footer.html' %}
