--- a/website/templates/add_experience.html
+++ b/website/templates/add_experience.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
-{% block content %}
-
+{% load static %}
+{% include 'inner-header.html' %}
+{% if user.is_authenticated %}
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-6">
@@ -89,4 +89,5 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endif %}
+{% include 'footer.html' %}
