--- a/website/templates/edit_education.html
+++ b/website/templates/edit_education.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %}
-{% block content %}
-
+{% load static %}
+{% include 'inner-header.html' %}
+{% if user.is_authenticated %}
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row mb-5 justify-content-center">
         <div class="col-lg-6">
-            <h1>Add Education/Certifications</h1>
+            <h1>Edit Education/Certifications</h1>
                 <form method="POST">
                     {% csrf_token %}
                     <div class="mb-3">
@@ -26,4 +26,5 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endif %}
+{% include 'footer.html' %}
